package SanProto;

message SoldierInfo {
	optional uint64 id = 1;
	optional int32 basic_id = 2;
	optional int32 level = 3;
	optional bool is_activated = 4;
}